Add hex decoder utility and test addition